[gd_scene load_steps=21 format=2]

[ext_resource path="res://Node/font/node_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Node/graph_node.gd" type="Script" id=2]
[ext_resource path="res://Node/hightlight_node_with_frequency_and_bool.gdshader" type="Shader" id=3]
[ext_resource path="res://Node/NodeName.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/themes/NodePopupTheme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/textures/station_explored.png" type="Texture" id=6]
[ext_resource path="res://Node/CircleNode80.png" type="Texture" id=7]
[ext_resource path="res://Assets/textures/planets/DarkRedClick.png" type="Texture" id=8]
[ext_resource path="res://Assets/textures/planets/RedLeftClick.png" type="Texture" id=9]
[ext_resource path="res://Assets/materials/Outline2D.tres" type="Material" id=10]
[ext_resource path="res://Node/NodeFont.tres" type="DynamicFont" id=11]
[ext_resource path="res://Assets/GUI/sci-fi-theme.tres" type="Theme" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 39.3722

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/assigned_color = Plane( 1, 1, 1, 1 )
shader_param/WHITE = Plane( 1, 1, 1, 0.2 )
shader_param/FREQ = 3.0
shader_param/highlight = 0.0
shader_param/amplitude = 0.1

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.121569, 0.0117647, 0.596078, 0.145098 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="Animation" id=13]
resource_name = "ClickNode"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MouseButtonLeft:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 2 ),
"transitions": PoolRealArray( 2.92817, 1, 1.51572 ),
"update": 0,
"values": [ Vector2( 48, 72 ), Vector2( 44, 60 ), Vector2( 32, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MouseButtonLeft:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=17]
resource_name = "ErrorSelectingNode"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.0705882, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_error_audio"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "NodeBeingSelected"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/StationSimple:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/StationSimple:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=14]
length = 0.001

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="GraphNode" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Node2D" parent="."]
material = SubResource( 11 )

[node name="SpriteTexture" type="Sprite" parent="Sprite"]
unique_name_in_owner = true
material = ExtResource( 10 )
z_index = -1
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 80, 80 )

[node name="StationSimple" type="Sprite" parent="Sprite"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
use_parent_material = true
position = Vector2( 0, -1.43051e-06 )
scale = Vector2( 0.479042, 0.479042 )
texture = ExtResource( 6 )

[node name="Node2D" type="Node2D" parent="Sprite"]

[node name="NodeName" parent="Sprite/Node2D" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = -36.0
margin_top = -31.0
margin_right = 44.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
theme = null
custom_fonts/font = ExtResource( 11 )

[node name="Popup" type="Popup" parent="."]
visible = true
margin_left = 44.0
margin_top = -31.0
margin_right = 44.0
margin_bottom = 40.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource( 12 )

[node name="PanelContainer" type="PanelContainer" parent="Popup"]
margin_right = 112.0
margin_bottom = 58.0
mouse_filter = 2
custom_styles/panel = SubResource( 18 )

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/PanelContainer"]
margin_right = 201.0
margin_bottom = 76.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectUnselectButton" type="Button" parent="Popup/PanelContainer/VBoxContainer"]
margin_right = 201.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "Click: Select/Unselect"

[node name="AddToObjectButton" type="Button" parent="Popup/PanelContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 201.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "R: Add to Current Var"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Variable" type="Node2D" parent="."]
position = Vector2( 35, -40 )

[node name="Sprite" type="Sprite" parent="Variable"]
use_parent_material = true
position = Vector2( 1.90735e-06, 0 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="VariableHighlight" type="Label" parent="Variable/Sprite"]
use_parent_material = true
margin_left = -22.5
margin_top = -55.0
margin_right = 21.5
margin_bottom = 50.0
custom_colors/font_color = Color( 0.0588235, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ClickNode = SubResource( 13 )
anims/ErrorSelectingNode = SubResource( 17 )
anims/NodeBeingSelected = SubResource( 12 )
anims/RESET = SubResource( 14 )

[node name="MouseButtonLeft" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 32, 48 )
frames = SubResource( 16 )
frame = 1
speed_scale = 0.5
playing = true

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="pressed" from="Popup/PanelContainer/VBoxContainer/SelectUnselectButton" to="." method="_on_Select_UnselectButton_pressed"]
[connection signal="pressed" from="Popup/PanelContainer/VBoxContainer/AddToObjectButton" to="." method="_on_AddToObjectButton_pressed"]
